# discord-auth

./: .env.example  Dockerfile  README.md  docker-compose.yaml  prestart.sh  pyproject.toml  scripts.py
app/: config.py  main.py  mongodb.py  utils.py
app/clients/: goon_auth_api.py  goon_files_api.py
app/clients/discord_api/: __init__.py  client.py  constants.py  endpoints.py
app/clients/discord_api/models/: channel.py  guild.py
app/cogs/: goon_auth.py
app/commands/: __init__.py  auth.py  goon_auth.py  info.py  options.py  setup.py  utils.py
app/commands/handlers/: auth_handler.py
app/commands/responses/: __init__.py  about_responses.py  auth_responses.py  help_responses.py  setup_responses.py
app/commands/views/: __init__.py  about_view.py  auth_view.py  help_view.py  setup_view.py  utils.py
app/models/: goon_server.py  user_auth_request.py
app/utils/: auth.py
tests/: test_discord_api.py  test_files_api_client.py  utils.py
