[tool.poetry]
name = "discord-auth"
version = "0.1.0"
description = "Discord authentication service"
authors = ["Ian P <ian@aotc.us>"]
repository = "https://github.com/GoonAuthNetwork/discord-auth"
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "1.7.1"
discord-py-slash-command = "1.1.1"
python-dotenv = "0.17.0"
pydantic = "1.8.1"
loguru = "0.5.3"
cogwatch = "^2.1.0"
httpx = "^0.17.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
